Fix white bar that showed up on mobile

--- a/styles/navbar-top-fixed.css
+++ b/styles/navbar-top-fixed.css
@@ -1,8 +1,6 @@
 /* Show it is fixed to the top */
 body {
-  /*min-height: 75rem;*/
-  /*padding-top: 4.5rem;*/
-  padding-top: 56px;
+  min-height: 75rem;
 }
 
 .modal-dialog {
