--- a/styles/projects.css
+++ b/styles/projects.css
@@ -19,7 +19,7 @@ a:hover {
 
 #section-wrapper-projects {
   animation: fadeIn 1s;
-  padding-top: 35px;
+  padding-top: 70px;
 }
 
 /*.card-deck .card-primary .header-bg {
