--- a/styles/resume.css
+++ b/styles/resume.css
@@ -19,7 +19,7 @@ body {
 
 #section-wrapper-resume {
   text-align: left;
-  padding-top: 35px;
+  padding-top: 70px;
   font-family: "Gill Sans", sans-serif;
 }
 
